--- a/src/components/MenuComponent/style.css
+++ b/src/components/MenuComponent/style.css
@@ -1,3 +1,7 @@
+.container {
+    padding-top: 80px; /* Ajuste este valor conforme a altura do seu menu fixo */
+}
+
 .menu-container {
     position: fixed;
     width: 220px;
